# ai_all_test

./: .env.example  .gitignore  Dockerfile.backend  Makefile  PROJECT_COVERAGE.md  QUICKSTART.md  README.md  README_BUSINESS_DATASET_SNIPPET.md  README_BUSINESS_V3_SNIPPET.md  README_LARGE_DATASET_TRAIN_TEST_SNIPPET.md  README_PLATFORM_V2_SNIPPET.md  README_PRODUCTION_PILOT_V4_SNIPPET.md  README_PUBLIC_DATASET_TRAIN_TEST_SNIPPET.md  docker-compose.business.yml  docker-compose.prod-lite.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements-business.txt  requirements.txt
configs/: business_ops.yaml  business_test_dataset.yaml  dataset_registry.yaml  default.yaml  large_dataset_training.yaml  llava_lora.yaml  model_registry.yaml  production_pilot_v4.yaml  public_dataset_pipeline.yaml  rag_qdrant.yaml  yolo_accel.yaml  zero2.json
docs/: ACCURACY_OPTIMIZATION_GUIDE.md  API_REFERENCE.md  BUSINESS_DATASET_TESTING_GUIDE.md  BUSINESS_PLATFORM_V3.md  BUSINESS_TASK_SYSTEM.md  BUSINESS_V3_ACCEPTANCE.md  COMMERCIAL_QUALITY_GATE.md  COMMERCIAL_RELEASE_CHECKLIST.md  CUSTOMER_REPORT_V4.md  DATABASE_OBJECT_STORAGE_MONITORING.md  DATASET_TRAINING_TEST_ACCEPTANCE.md  EXPERIMENT_LOG.md  EXPERIMENT_ORCHESTRATION.md  EXPERIMENT_RESULTS.md  FIELD_SERVICE_DATASET_SPEC.md  GUI_AGENT_TRACE.md  HARDWARE_ENVIRONMENT.md  LARGE_DATASET_TRAIN_TEST_WORKFLOW.md  LLAVA_SCOPE_AND_BOUNDARIES.md  LLAVA_TRAINING_REPORT.md  MODEL_AND_DATA.md  MODEL_DATA_REGISTRY.md  MULTIMODAL_LARGE_DATASET_WORKFLOW.md  MULTIMODAL_TRAINING_PIPELINE.md  PLATFORM_V2_ARCHITECTURE.md  POSTGRES_MINIO_V4.md  (+24 more)
(+163 files in other folders)
